tests/errors/form-fill-malformed-line.wit
@cite
  author: Smith
  this line has no colon
  year: 2024
cite@
